// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logger should log debug info warn error to console when configured accordingly 1`] = `
Object {
  "debug": [MockFunction] {
    "calls": Array [
      Array [
        "debug",
      ],
    ],
  },
  "error": [MockFunction] {
    "calls": Array [
      Array [
        "error",
      ],
    ],
  },
  "info": [MockFunction] {
    "calls": Array [
      Array [
        "info",
      ],
    ],
  },
  "warn": [MockFunction] {
    "calls": Array [
      Array [
        "warn",
      ],
    ],
  },
}
`;

exports[`Logger should log error to console when configured accordingly 1`] = `
Object {
  "debug": [MockFunction],
  "error": [MockFunction] {
    "calls": Array [
      Array [
        "error",
      ],
    ],
  },
  "info": [MockFunction],
  "warn": [MockFunction],
}
`;

exports[`Logger should log info warn error to console when configured accordingly 1`] = `
Object {
  "debug": [MockFunction],
  "error": [MockFunction] {
    "calls": Array [
      Array [
        "error",
      ],
    ],
  },
  "info": [MockFunction] {
    "calls": Array [
      Array [
        "info",
      ],
    ],
  },
  "warn": [MockFunction] {
    "calls": Array [
      Array [
        "warn",
      ],
    ],
  },
}
`;

exports[`Logger should log logger name in debug info warn error to console when configured accordingly 1`] = `
Object {
  "debug": [MockFunction] {
    "calls": Array [
      Array [
        "[logger name]",
        "debug",
      ],
    ],
  },
  "error": [MockFunction] {
    "calls": Array [
      Array [
        "[logger name]",
        "error",
      ],
    ],
  },
  "info": [MockFunction] {
    "calls": Array [
      Array [
        "[logger name]",
        "info",
      ],
    ],
  },
  "warn": [MockFunction] {
    "calls": Array [
      Array [
        "[logger name]",
        "warn",
      ],
    ],
  },
}
`;

exports[`Logger should log warn error to console when configured accordingly 1`] = `
Object {
  "debug": [MockFunction],
  "error": [MockFunction] {
    "calls": Array [
      Array [
        "error",
      ],
    ],
  },
  "info": [MockFunction],
  "warn": [MockFunction] {
    "calls": Array [
      Array [
        "warn",
      ],
    ],
  },
}
`;

exports[`Logger should should not log by default 1`] = `
Object {
  "debug": [MockFunction],
  "error": [MockFunction],
  "info": [MockFunction],
  "warn": [MockFunction],
}
`;
